# cs-chatbot-tools-poc

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.claude/: launch.json
docs/: handover.md
results/: eval_report.json
src/cschatbot/: config.py  logging_setup.py
src/cschatbot/api/: app.py  routes.py  session.py
src/cschatbot/graph/: builder.py  routing.py
src/cschatbot/graph/nodes/: intent_detection.py  response_generation.py
src/cschatbot/intents/: taxonomy.py
src/cschatbot/llm/: client.py
src/cschatbot/models/: api.py  enums.py  state.py  tools.py
src/cschatbot/sops/: content.py  retrieval.py
src/cschatbot/static/: index.html
src/cschatbot/tools/: mocks.py  registry.py
tests/: conftest.py  test_api_integration.py  test_multi_intent.py  test_routing.py  test_sops.py  test_tools.py
tests/eval/: cases.py  runner.py
tests/simulation/: __main__.py  scenarios.py  simulator.py
